# neuroFlowNotes

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SPECS.md  TESTING_PLAN.md  TODO.md  WORKSPACE_LAYOUT.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/: WORKFLOWS.md
.github/workflows/: build-artifacts.yml  ci.yml  release.yml
crates/core_domain/: Cargo.toml
crates/core_domain/src/: importer.rs  lib.rs  templates.rs  todos.rs  vault.rs  watcher.rs
crates/core_embedding/: Cargo.toml
crates/core_embedding/src/: client.rs  hybrid.rs  lib.rs  queue.rs  types.rs
crates/core_fs/: Cargo.toml
crates/core_fs/src/: lib.rs
crates/core_index/: Cargo.toml
crates/core_index/src/: frontmatter.rs  lib.rs  markdown.rs
crates/core_storage/: Cargo.toml
crates/core_storage/src/: lib.rs  repository.rs  schema.rs
crates/core_storage/src/repository/: aliases.rs  backlinks.rs  dates.rs  embeddings.rs  folder_properties.rs  habits.rs  mod.rs  notes.rs  properties.rs  queries.rs  schedule.rs  tags.rs  todos.rs
crates/core_storage/tests/: aliases_repository.rs  backlinks_repository.rs  dates_repository.rs  habits_repository.rs  notes_repository.rs  properties_repository.rs  queries_repository.rs  schedule_repository.rs  tags_repository.rs  todos_repository.rs
crates/core_storage/tests/helpers/: mod.rs
crates/shared_types/: Cargo.toml
crates/shared_types/bindings/: BacklinkDto.ts  CardConfig.ts  ConvertFrontmatterResponse.ts  CreateHabitRequest.ts  CreateScheduleBlockRequest.ts  DailyNoteResult.ts  DeletePropertyKeyRequest.ts  EmbedContent.ts  EmbeddingProgress.ts  EmbeddingSettings.ts  EmbeddingStatus.ts  ExecuteQueryEmbedRequest.ts  FilterMatchMode.ts  FolderNode.ts  FolderPropertyDto.ts  HabitDateRange.ts  HabitDto.ts  HabitEntryDto.ts  HabitTableOrientation.ts  HabitTrackerQuery.ts  HabitTrackerResponse.ts  HabitType.ts  HabitViewType.ts  HabitWithEntries.ts  HeadingInfo.ts  HybridSearchOptions.ts  HybridSearchResult.ts  ImportProgress.ts  ImportResult.ts  ImportVaultRequest.ts  IndexCompletePayload.ts  InteractiveFilter.ts  KanbanConfig.ts  LogHabitEntryRequest.ts  MatchType.ts  MergePropertyKeysRequest.ts  NoteContent.ts  NoteDto.ts  NoteForDate.ts  NoteListItem.ts  (+42 more)
crates/shared_types/src/: lib.rs
crates/shared_types/src/types/: backlink.rs  embed.rs  embedding.rs  event.rs  folder.rs  habit.rs  import.rs  mod.rs  note.rs  property.rs  query.rs  query_embed.rs  schedule.rs  search.rs  tag.rs  template.rs  todo.rs  vault.rs
docs/: PROPERTIES.md  QUERY_EMBEDS.md  SETTINGS.md
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: link-summarizer.js  transcript_summarizer.py
src-tauri/src/: commands.rs  main.rs  state.rs  stream.rs
src-tauri/src/commands/: backlinks.rs  embeds.rs  folder_tree.rs  habits.rs  import.rs  mod.rs  notes.rs  plugins.rs  properties.rs  queries.rs  schedule.rs  search.rs  summarizers.rs  tags.rs  templates.rs  todos.rs  vault.rs
src/lib/: types.ts
src/lib/components/: Breadcrumb.svelte  CalendarDaily.svelte  CalendarMonthly.svelte  CalendarWeekly.svelte  ColumnEditor.svelte  DocList.svelte  DocumentColumns.svelte  FolderPropertiesModal.svelte  FolderTree.svelte  ImportModal.svelte  MediaViewer.svelte  NoteEditor.svelte  PluginSettings.svelte  PropertiesEditor.svelte  PropertiesPanel.svelte  QueryBuilder.svelte  ScheduleBlockModal.svelte  SearchModal.svelte  SettingsModal.svelte  Sidebar.svelte  TaskView.svelte  TodoPanel.svelte  Topbar.svelte  index.ts
src/lib/components/calendar/: DraggableScheduleBlock.svelte  HourSlot.svelte  ScheduleBlockCard.svelte  TimeGutter.svelte  index.ts
src/lib/components/folder-tree/: TreeContextMenu.svelte  index.ts
src/lib/components/query-builder/: QueryBuilder.svelte  QueryFilters.svelte  QueryOptions.svelte  QueryResults.svelte  index.ts  queryUtils.ts
src/lib/components/shared/: EmptyState.svelte  FuzzySelect.svelte  InlineInput.svelte  Modal.svelte  MultiValueInput.svelte  NavigationArrows.svelte  NoteAutocomplete.svelte  PanelHeader.svelte  ResizeHandle.svelte  TextInput.svelte  Toast.svelte  index.ts
src/lib/constants/: calendar.ts  colors.ts  index.ts  layout.ts
src/lib/editor/: cache.ts  calloutExtension.ts  editorConfig.ts  embedExtension.ts  frontmatterConversion.ts  habitTrackerExtension.ts  hoverPreview.ts  index.ts  linkHandler.ts  livePreview.ts  markdownHighlight.ts  pasteHandler.ts  queryEmbedExtension.ts  vimExtension.ts  wikiLinkCompletion.ts
src/lib/plugins/: api.ts  index.ts  registry.svelte.ts  types.ts
src/lib/services/: api.ts  client.ts  events.ts  index.ts  settings.ts  themes.ts
src/lib/services/api/: calendar.ts  embeds.ts  folders.ts  habits.ts  import.ts  index.ts  notes.ts  properties.ts  query.ts  search.ts  tags.ts  templates.ts  todos.ts  vault.ts
src/lib/stores/: drag.svelte.ts  editor.svelte.ts  index.ts  notifications.svelte.ts  vault.svelte.ts  workspace.svelte.ts
src/lib/styles/: futureThemes  theme.css
src/lib/styles/themes/: almond.css  amethyst.css  blackberry.css  blossom.css  dark.css  darkmuu.css  dracula.css  halloween.css  index.ts  (+11 more)
src/lib/types/: calendar.ts  common.ts  embed.ts  embedding.ts  events.ts  habit.ts  import.ts  index.ts  metadata.ts  note.ts  query.ts  search.ts  template.ts  vault.ts
src/lib/utils/: blockLayoutUtils.ts  calendarDragDrop.ts  calendarShared.svelte.ts  dateUtils.ts  docListUtils.ts  fileTypes.ts  index.ts  logger.ts
(+14 files in other folders)
