[workspace]
resolver = "2"
members = [
    "crates/shared_types",
    "crates/core_fs",
    "crates/core_index",
    "crates/core_storage",
    "crates/core_embedding",
    "crates/core_domain",
    "src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["NeuroFlow Notes"]
license = "MIT"

[workspace.dependencies]
# Shared across crates
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"

# Markdown parsing
pulldown-cmark = "0.12"

# SQLite
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# File watching
notify = "7.0"
notify-debouncer-mini = "0.5"

# Hashing
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"

# Recurrence rules (RFC 5545)
rrule = "0.14"

# Regex for wikilinks/tags
regex = "1.11"
once_cell = "1.20"

# Tauri
tauri = { version = "2.1", features = [] }
tauri-build = { version = "2.0" }

# TypeScript type generation
ts-rs = { version = "10.0", features = ["serde-compat", "chrono-impl"] }

# YAML parsing (for Obsidian frontmatter)
serde_yaml = "0.9"
