[package]
name = "core_storage"
version.workspace = true
edition.workspace = true

[dependencies]
shared_types = { path = "../shared_types" }
core_index = { path = "../core_index" }
thiserror.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
rrule.workspace = true

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
assert_matches = "1.5"
